<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.biznnovate.entrenaste_demo.gym_classes_crossfit_pty_class"
    android:id="@+id/crossfit_pty_class">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:src="@android:drawable/ic_menu_camera"
        android:layout_below="@+id/textView22"
        android:layout_toLeftOf="@+id/textView21"
        android:layout_toStartOf="@+id/textView21" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Tel.:"
        android:id="@+id/textView14"
        android:layout_alignBaseline="@+id/editText"
        android:layout_alignBottom="@+id/editText"
        android:layout_toLeftOf="@+id/editText" />




    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/editText"
        android:text="@string/crossfit_pty_gym_phone"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/crossfit_pty_gym_name"
        android:id="@+id/textView19"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Reservar"
        android:id="@+id/button"
        android:layout_below="@+id/textView21"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Detalles de Clase a Reservar"
        android:id="@+id/textView20"
        android:layout_below="@+id/textView19"
        android:layout_alignRight="@+id/textView21"
        android:layout_alignEnd="@+id/textView21"
        android:layout_marginTop="32dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/crossfit_pty_gym_class_demo"
        android:id="@+id/textView21"
        android:layout_below="@+id/textView20"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="Dir.:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textView22"
        android:layout_below="@+id/editText"
        android:layout_alignLeft="@+id/textView14"
        android:layout_alignStart="@+id/textView14" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine"
        android:id="@+id/editText4"
        android:text="@string/crossfit_pty_gym_address"
        android:layout_below="@+id/textView14"
        android:layout_alignLeft="@+id/editText"
        android:layout_alignStart="@+id/editText" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView4"
        android:src="@android:drawable/ic_menu_mapmode"
        android:layout_below="@+id/quickContactBadge2"
        android:layout_toRightOf="@+id/textView14" />

    <QuickContactBadge
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/quickContactBadge2"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editText4"
        android:layout_toRightOf="@+id/textView14" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Contacto"
        android:id="@+id/textView22"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editText4"
        android:layout_toRightOf="@+id/textView14" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crossfit_pty_gym_contact_name"
        android:id="@+id/textView22"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageView4"
        android:layout_toRightOf="@+id/textView14" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crossfit_pty_gym_contact_role"
        android:id="@+id/textView22"
        android:layout_marginTop="46dp"
        android:layout_below="@+id/textView21"
        android:layout_toRightOf="@+id/textView22"
        android:layout_toEndOf="@+id/textView22" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/editText4"
        android:text="@string/crossfit_pty_gym_description"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
